overflow fix

--- a/style.css
+++ b/style.css
@@ -1,31 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;500;700;900&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Noto Sans', sans-serif;
 }
-body{
+
+body {
     width: 100%;
     background: black;
 
 }
-html{
+
+html {
     font-size: 62.5%;
-    overflow: hidden;
+    overflow-x: hidden;
 }
-.container{
+
+.container {
     display: flex;
     width: 100%;
 }
-.imgsection{
+
+.imgsection {
     width: 60%;
     height: 95vh;
     overflow: hidden;
     position: relative;
 
 }
-.imgsection i{
+
+.imgsection i {
     /* z-index: 1000; */
     position: absolute;
     top: 0;
@@ -34,42 +40,49 @@ html{
     color: rgb(238, 241, 243);
     font-size: 400px;
 }
-.imgsection img{
+
+.imgsection img {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     height: 100%;
 }
-.loginpage{
+
+.loginpage {
     width: 50%;
     padding: 45px 30px;
 }
-.logo{
+
+.logo {
     padding-bottom: 60px;
 }
-.logo i{
+
+.logo i {
     display: block;
     color: rgb(214 217 219);
     /* width: 50px; */
     font-size: 50px;
 
 }
-.text-box{
+
+.text-box {
     color: white;
     margin-bottom: 20px;
 }
-.text-box h1{
+
+.text-box h1 {
     font-size: 7rem;
     padding-bottom: 50px;
     font-weight: 900;
 }
-.text-box span{
+
+.text-box span {
     font-size: 3.5rem;
     font-weight: 900;
-   
+
 }
 
-.button-box button{
+.button-box button {
     display: block;
     background: #fff;
     color: black;
@@ -81,43 +94,51 @@ html{
     align-items: center;
     justify-content: center;
     padding: 7px;
-    
+
 
 }
-.button-box button img{
+
+.button-box button img {
     width: 20px;
     padding-right: 5px;
 }
- .google{
+
+.google {
     font-weight: 500;
     padding-bottom: 20px;
     margin-bottom: 10px;
 }
-.apple{
+
+.apple {
     font-weight: 700;
-   
-    
+
+
 
 }
-.button-box button  i{
+
+.button-box button i {
     display: inline-block;
     width: 20px;
     padding-right: 25px;
     font-size: 20px;
 
 }
-.line{
+
+.line {
     width: 330px;
     text-align: center;
     padding: 10px;
 }
-.line h3{
+
+.line h3 {
     color: white;
 }
-.signupbtn{
+
+.signupbtn {
     /* padding-top: 30px; */
 }
-.signupbtn input{
+
+.signupbtn input {
     height: 40px;
     width: 330px;
     background: rgb(29 155 240);
@@ -127,19 +148,21 @@ html{
     border-radius: 20px;
     text-align: center;
     outline: none;
-    
+
 }
 
-.signinbox{
+.signinbox {
     padding-top: 40px;
     /* padding-top: 20px; */
 }
-.signinbox h2{
+
+.signinbox h2 {
     font-size: 1.6rem;
     color: #fff;
     font-weight: 500;
 }
-.signinbox input{
+
+.signinbox input {
     background: black;
     color: rgb(29 155 240);
     border: .1rem solid rgb(176, 178, 180);
@@ -153,20 +176,25 @@ html{
 
 
 
-@media(max-width:1100px){
-    .container{
+@media(max-width:1100px) {
+    .container {
         flex-direction: column-reverse;
         align-items: center;
     }
-    .imgsection{
+
+    .imgsection {
         width: 100%;
     }
-    .loginpage{
+
+    .loginpage {
         /* width: 100%; */
-       margin: auto;
+        /* margin: auto; */
         padding: 45px 15px;
     }
-    .text-box h1{
+
+    .text-box h1 {
         font-size: 5rem;
     }
+
+    .imgsection {}
 }
